--- a/app/views/list_types/index.html.erb
+++ b/app/views/list_types/index.html.erb
@@ -1,18 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<center><h4>Your Lists</h4>
-
-<div class="category_header"> Keep you lists organized by Category</div>
-
-<br>
-
-
-    <p> STEP 1: Click "Create a New Category" to create the categories that fit your life ie; groceries, school, packing, home projects, etc.</p>
-    <p> STEP 2:  Click on "Create a New List" and organize that list into one of the customs categories you just created.</p>
-   
-
-
+<center><h4 style="color:white">Your Lists</h4>
 
 <% if current_user.present?%>
 
