--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,21 @@
 <div class="container">
 
   <div class="jumbotron">
-    <h3 class="display-4"> About Friendly Task</h3>
+    <h3 > About Friendly Task</h3>
     <br>
     <center><p class="lead">Welcome to Friendly Task,  You've got lists and projects to create and organize!</p></center>
     <hr class="my-4">
+    <h3>Instructions</h3>
+
+<div class="category_header"> Keep you lists organized by Category</div>
+
+<br>
+
+
+    <p> STEP 1: Click "Create a New Category" to create the categories that fit your life ie; groceries, school, packing, home projects, etc.</p>
+    <p> STEP 2:  Click on "Create a New List" and organize that list into one of the customs categories you just created.</p>
+   
+
 
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
