--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="jumbotron">
-    <h3 class="display-4">Friendly Task</h3>
+    <h3 >Friendly Task</h3>
     <br>
     <center><p class="lead">Welcome to Friendly Task,  You've got lists and projects to create and organize!</p></center>
     <hr class="my-4">
