--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,9 @@
     <title>Friendly Task</title>
     <%= csrf_meta_tags %>
 
-
+    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
     <%= favicon_link_tag 'favicons/favicon.ico' %>
+    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -15,9 +16,8 @@
 
   <body>
 
-    <%= render 'shared/alerts' %>
-
-    
     <%= yield %>
+    <%= alerts %>
+    
   </body>
 </html>
