--- a/app/views/lists/_list_item_fields.html.erb
+++ b/app/views/lists/_list_item_fields.html.erb
@@ -1,7 +1,7 @@
     <center>
     <div class= "form-group nested-fields">
       <%#= f.label :name, "List Item" %>
-      <%= f.text_area :item, cols: 40, rows: 2 %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <%= f.text_area :item, cols: 35, rows: 2, class: 'myclass' %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          <%= link_to_remove_association f  do %>
        <%= fa_icon 'trash', :class =>'trashcan'%>
       <%end%> 
