--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -16,9 +16,9 @@
             </li> -->
                 
 
-<!--               <li class="nav-item">
-              <%#= link_to 'About', pages_about_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </li> -->
+           <li class="nav-item">
+              <%= link_to 'About', pages_about_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li> 
 
         <% if current_user.present?%>
 
