got rid of sprockets manifest since some css wasnt' coming through, tried a different location of the apple-icon

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -197,7 +197,12 @@ label {
 .items{
     color:#007AFE;
     font-size: 13pt;
+    line-height: 0.8;
+}
 
+.bigger-please{
+font-size: 13pt;
+color:orange;
 
 }
 
