--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -7,7 +7,7 @@
         <ul class="navbar-nav">
               &nbsp;&nbsp;&nbsp;&nbsp;
 
-            <li class="nav-item active">
+            <li class="nav-item active bigger-please">
               <%= link_to 'Home', pages_home_path %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </li>
 
@@ -16,7 +16,7 @@
             </li> -->
                 
 
-           <li class="nav-item">
+           <li class="nav-item bigger-please">
               <%= link_to 'About', pages_about_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </li> 
 
@@ -27,10 +27,12 @@
             </li> -->
 
 
-              <li class="nav-item">
+              <li class="nav-item bigger-please">
               <%#= link_to 'My Lists', lists_path%> <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
               <%= link_to 'My Lists', list_types_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </li>
+            <br>
+         
 
 <!--               <li class="nav-item">
               <%#= link_to 'Team Tasks',  teams_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
