--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -64,7 +64,7 @@ div {
 }
 
 #notice {
-  color: green;
+  color: white;
 }
 
 .field_with_errors {
@@ -197,7 +197,7 @@ label {
 .items{
     color:#007AFE;
     font-size: 13pt;
-    line-height: 0.8;
+    line-height: 1.3;
 }
 
 .bigger-please{
