--- a/app/views/list_types/_form.html.erb
+++ b/app/views/list_types/_form.html.erb
@@ -17,7 +17,7 @@
 
  <hr>
        <button type="button" class= 'btn btn-success'> 
-   <%= form.submit  "Creat Category" , :class =>'btn btn-success'%>
+   <%= form.submit  "Create Category" , :class =>'btn btn-success'%>
    </button>
 <% end %>
 <br>
