--- a/app/views/list_types/new.html.erb
+++ b/app/views/list_types/new.html.erb
@@ -1,6 +1,7 @@
 <h3>Categories</h3>
 
 <%= render 'form', list_type: @list_type %>
-
+<div class=".form-top">
 <%= link_to 'Back', list_types_path %>
+</div>
 <br>
