--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title>Friendly Task</title>
     <%= csrf_meta_tags %>
 
-    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-57x57.png">
+    <%= render "shared/favicon"
     <%= favicon_link_tag 'favicons/favicon.ico' %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
