--- a/app/views/shared/_favicon.html.erb
+++ b/app/views/shared/_favicon.html.erb
@@ -1,7 +1,8 @@
-<% %w(76 120 152 180).each do |size| %>
-  <%= favicon_link_tag "apple-icon-#{size}x#{size}.png", rel: 'apple-icon', type: 'image/png', sizes: "#{size}x#{size}" %>
-<% end %>
 
-<% %w(16 32).each do |size| %>
-  <%= favicon_link_tag "favicon-#{size}x#{size}.png", rel: 'icon', type: 'image/png', sizes: "#{size}x#{size}" %>
-<% end %>
+/* <% %w(76 120 152 180).each do |size| %> */
+  /* <%= favicon_link_tag "apple-icon-#{size}x#{size}.png", rel: 'apple-icon', type: 'image/png', sizes: "#{size}x#{size}" %> */
+/* <% end %> */
+
+/* <% %w(16 32).each do |size| %> */
+  /* <%= favicon_link_tag "favicon-#{size}x#{size}.png", rel: 'icon', type: 'image/png', sizes: "#{size}x#{size}" %> */
+/* <% end %> */
