--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -250,5 +250,8 @@ color:orange;
 @media only screen and (max-width: 700px) {
   body {
       background-color: #2A2A2C;
+      width:95%;
   }
+
+
 }
