added relationship to user and lists listypes added some if statements and some changes to controllers for tying creation and viewing to users

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -6,7 +6,7 @@
 
 
 body {
-  background-color: rgb(171, 168, 168); 
+  background-color:gainsboro; 
   margin: 5px;
   font-family: 'Roboto', helvetica, sans-serif;
   font-size: 13px;
